src/styles/_library.scss
.library {
    position: fixed;
    top: 0;
    left: 0;
    width: 20rem;
    height: 100%;
    background: white;
    box-shadow: 2px 2px 50px rgb(201, 201, 201);
    overflow: scroll;
    transform: translateX(-100%);
    transition: all 0.5s ease;
    opacity:0;
    h2 {
        padding: 2rem;
    }
}

.library-songs {
    align-items: center;
    cursor: pointer;
    display: flex;
    padding: 1rem 2rem 1rem 2rem;
    transition: background 0.5s ease;
    
    img{
        width: 30%;
    }

    &:hover {
        background: rgb(240, 240, 240);
    }
}

.song-description {
    padding-left: 1rem;
    h3 {
        font-size: 1rem;
    }
    h4 {
        font-size: 0.7rem;
    }
}

* {
    scrollbar-width: thin;
    scrollbar-color: rgba(155,155,155,0.5) transparent;
}

/* The emerging W3C standard
   that is currently Firefox-only */
* {
    scrollbar-width: thin;
    scrollbar-color: rgba(155, 155, 155, 0.7) transparent;
}
  
  /* Works on Chrome/Edge/Safari */
  *::-webkit-scrollbar {
    width: 5px;
}

*::-webkit-scrollbar-track { 
    background: transparent;
}

*::-webkit-scrollbar-thumb {
    background-color: rgba(155,155,155,0.5);
    border-radius: 20px;
    border: transparent;
}

.selected {
    background: rgb(146, 190, 255);
}

.library-active {
    transform: translateX(10%);
    opacity:1;
}

@media screen and (max-width: 768px) {
    .library {
        width: 100%;
    }
}

